# VIP-ARES-Project

./: .gitignore  CMakeLists.txt  README.md  ares_alex_default_world.sdf  demo_publisher.py  demo_subscriber.py  mav.parm  mav.tlog  mav.tlog.raw  package.xml  pytest.ini  python_node_template.py  requirements.txt  sitl_params.parm
app/: package.xml  pytest.ini  requirements.txt  setup.py
app/app/Controllers/: NMPC_Controller.py  __init__.py
app/app/Models/: Dynamic_Model.py  __init__.py
app/app/Nodes/: NMPC_Node.py
app/launch/: ares_sim.launch.py
app/scripts/: plot_comparison.py
app/simulation/: ares_alex_default_world.sdf
app/src/: package.xml  setup.py
app/src/app/Config/: NMPC_Config.py  NRHDG_Config.py  __init__.py
app/src/app/Controllers/: NMPC_Controller.py  NRHDG_Controller.py  __init__.py
app/src/app/Models/: Dynamic_Model.py
app/src/app/Nodes/: Metrics_Logger_Node.py  NMPC_Node.py  NRHDG_Node.py
app/src/launch/: ares_sim.launch.py
app/test/: test_nmpc_controller.py  test_nmpc_node.py  test_nrhdg_controller.py
simulation/: mav.parm  sitl_params.parm
