<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ARES-Project</name>
  <version>0.0.0</version>
  <description>Autonomous Drone Control System using ROS2 and ArduPilot</description>
  <maintainer email="mzaitoun@purdue.edu">Mohammed Zaitoun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- MAVROS for ArduPilot communication -->
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>

  <!-- Message types -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Transformations -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>